# Academic-Projects

./: .gitignore  README.md
ANN-and-Deep-Learning/: README.md
ANN-and-Deep-Learning/assignment-01/: Homework_1(Convextnetxl）.ipynb  Homework_1(Densenet).ipynb  Homework_1(EfficientNetB0&VGG16).ipynb  Homework_1(VGG16).ipynb  README.md
ANN-and-Deep-Learning/assignment-02/: Homework_2(0.60808).ipynb  Homework_2(0.61821).ipynb  README.md
Automatic-Image-Analysis/: README.md
Automatic-Image-Analysis/exercise_1/: ex1.py  test.py
Automatic-Image-Analysis/exercise_2/: implicitShapeModelDetectionTask.ipynb  implicitShapeModelTrainingTask.ipynb
Automatic-Image-Analysis/exercise_3/: Exercise3.ipynb  environment.yml
Data-Analytics-with-Python/: README.md  case_study_app_group_20.py  case_study_group_20.html  case_study_group_20.ipynb
Deep-Learning/: README.md
Deep-Learning/03-optimization-b/: Exercise_03_solution.py
Deep-Learning/05-regularization-b/: Exercise_programming05_solution.py
Deep-Learning/07-convolutional-networks/: Exercise_programming07_solution.py
Deep-Learning/09-autoencoders/: Exercise_programming09_solution.py
Deep-Learning/12-representation-learning/: solution.py
Deep-Learning/13-attention-transformers/: attention.ipynb  attention_solution.ipynb
Deep-Learning/14-graph-neural-networks/: Exercise_programming14_solution.ipynb  (+1 more)
Deep-Learning/17-neural-odes/sheet04_programming/: pyproject.toml  requirements.txt  sheet07-neural-ode.ipynb
ML-in-Computational-Mechanics/: README.md
Machine-Learning/: README.md
Motion-Planning/: README.md
(+79 files in other folders)
